src/test/deca/context/invalid/created/acces_field/acces_method_comme_field.deca
// Description :
//    acces à un field sur l'identificateur
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 :(3.65) Le champ n’est pas un attribut de classe


class A {
void meth(){}
}

{
A a = new A();
a.meth;
}